2004-12-03  John Luke  <john.luke@gmail.com>

	* Dialogs/ExceptionDialog.cs: remove obsolete gtype stuff
	* MonoDevelopMain.cs: comment out unused code
	* Makefile.am: remove ExceptionDialog from build

2004-09-18  Todd Berman  <tberman@off.net>

	* MonoDevelopMain.cs: Check if Build and Revision are not 0, and if
	so, use them as well when building the version #.

2004-08-07  Todd Berman  <tberman@off.net>

	* AssemblyInfo.cs.in: Use new ASSEMBLY_VERSION variable.

2004-07-01  John Luke  <jluke@cfl.rr.com>

	* MonoDevelopMain.cs: return 1 on error and 0 otherwise
	* MonoDevelopOptions.cs: remove unneeded -f option
	implement reusing MD instance only when we are getting passed
	arguments (like files). This allows more than one MD to be run
	at a time, and adding files from nautilus still works.  Less
	than perfect, but better than what it was

2004-07-01  John Luke  <jluke@cfl.rr.com>

	* MonoDevelopMain.cs: implement nologo
	* MonoDevelopOptions.cs: add -f and --nologo args

2004-07-01  John Luke  <jluke@cfl.rr.com>

	* AssemblyInfo.cs.in: clean up and add some informaition used below
	* Makefile.am: add Mono.GetOptions reference and new file
	* MonoDevelopOptions.cs: new file for handling options
	* MonoDevelopMain.cs: begin using MonoDevelopOptions

2004-07-01  Todd Berman  <tberman@off.net>

	* MonoDevelopMain.cs: Dont attempt to load 0 length filenames.

2004-06-28  Todd Berman  <tberman@off.net>

	* MonoDevelopMain.cs: add Exit (0); and poof, issues are gone.

2004-05-24  Todd Berman  <tberman@sevenl.net>

	* Makefile.am: add Mono.Posix reference
	* MonoDevelopMain.cs: Use a unix socket to only allow one instance of
	MD to be open at a time. This should eventually use something like
	dbus or something else instead of a unix socket. Also, a --new-process
	arg should be added or something similar to allow more than one
	open copy of MD at a time.

2004-04-19  Todd Berman  <tberman@sevenl.net>

	* Makefile.am: only link the one .resources file we need.
